--- a/app/src/main/res/navigation/base_nav.xml
+++ b/app/src/main/res/navigation/base_nav.xml
@@ -21,6 +21,12 @@
         <action
             android:id="@+id/action_logInFragment_to_forgotPasswordFragment"
             app:destination="@id/forgotPasswordFragment" />
+        <action
+            android:id="@+id/action_logInFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_logInFragment_to_productDetailsFragment"
+            app:destination="@id/productDetailsFragment" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
@@ -55,6 +61,9 @@
         <action
             android:id="@+id/action_profileFragment_to_buyerDashboardFragment"
             app:destination="@id/buyerDashboardFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_fullUserProfileFragment"
+            app:destination="@id/fullUserProfileFragment" />
     </fragment>
     <fragment
         android:id="@+id/setupStoreFragment"
@@ -108,6 +117,9 @@
         <action
             android:id="@+id/action_homeFragment_to_productDetailsFragment"
             app:destination="@id/productDetailsFragment" />
+        <action
+            android:id="@+id/action_homeFragment_self"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/cartFragment"
@@ -145,6 +157,9 @@
         <action
             android:id="@+id/action_productDetailsFragment_to_productStoreFragment"
             app:destination="@id/productStoreFragment" />
+        <action
+            android:id="@+id/action_productDetailsFragment_to_logInFragment"
+            app:destination="@id/logInFragment" />
     </fragment>
     <fragment
         android:id="@+id/orderDetailsFragment"
@@ -252,6 +267,28 @@
         android:name="com.example.farmersecom.features.authentication.presentation.login.ForgotPasswordFragment"
         android:label="fragment_forgot_password"
         tools:layout="@layout/fragment_forgot_password" />
+    <fragment
+        android:id="@+id/fullUserProfileFragment"
+        android:name="com.example.farmersecom.features.profile.presentation.fullProfile.FullUserProfileFragment"
+        android:label="fragment_full_user_profile"
+        tools:layout="@layout/fragment_full_user_profile" >
+        <action
+            android:id="@+id/action_fullUserProfileFragment_to_editPersonalInfoFragment"
+            app:destination="@id/editPersonalInfoFragment" />
+        <action
+            android:id="@+id/action_fullUserProfileFragment_to_changePasswordFragment"
+            app:destination="@id/changePasswordFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/changePasswordFragment"
+        android:name="com.example.farmersecom.features.profile.presentation.changePassword.ChangePasswordFragment"
+        android:label="fragment_change_password"
+        tools:layout="@layout/fragment_change_password" />
+    <fragment
+        android:id="@+id/editPersonalInfoFragment"
+        android:name="com.example.farmersecom.features.profile.presentation.editPersonalInfo.EditPersonalInfoFragment"
+        android:label="fragment_edit_personal_info"
+        tools:layout="@layout/fragment_edit_personal_info" />
 
 
 </navigation>
