--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,108 +6,128 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".features.profile.presentation.profile.ProfileFragment">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/imageCardView"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        app:cardCornerRadius="60dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp">
-        <ImageView
-            android:id="@+id/imageViewProfile"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:background="@color/colorPrimaryDark" />
-    </com.google.android.material.card.MaterialCardView>
 
-
-    <TextView
-        android:id="@+id/textViewProfileFragName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/imageCardView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:text="@string/name"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/buttonUpdateInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Update Personal info"
-        android:layout_below="@id/textViewProfileFragName"
-        android:background="@color/colorTransparent"
-        android:textColor="@color/colorGrey"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:textAllCaps="false"
-        />
-
-    <TextView
-        android:id="@+id/textBuyersSection"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/buttonUpdateInfo"
-        android:text="buyers Section"
-        android:layout_marginTop="24dp"
-        android:layout_marginStart="24dp"
-        />
-
-    <Button
-        android:id="@+id/buttonBuyersSection"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_below="@id/textBuyersSection"
-        android:layout_marginStart="24sp"
-        android:layout_marginTop="8dp"
-        android:text="Buyers Section"
-        android:textSize="10sp" />
-
-
-    <TextView
-        android:id="@+id/textSellersSection"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/buttonBuyersSection"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:text="sellers Section" />
-
-
-    <Button
-        android:id="@+id/buttonSetupStore"
-        android:layout_width="100dp"
-        android:layout_height="80dp"
-        android:layout_below="@id/textSellersSection"
-        android:layout_marginStart="24sp"
-        android:layout_marginTop="8dp"
-        android:text="Setup Store"
-        android:visibility="gone" />
-
-    <Button
-        android:id="@+id/buttonGoToStore"
-        android:layout_width="100dp"
-        android:layout_height="80dp"
-        android:layout_below="@id/buttonSetupStore"
-        android:layout_marginStart="24sp"
-        android:layout_marginTop="8dp"
-        android:text="Go to Store"
-        android:visibility="gone" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonProfileFragLogout"
+    <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="40dp"
-        android:background="@drawable/button_bg"
-        android:text="Log out"
-        android:textColor="@color/white" />
+        android:id="@+id/fragmentProfileProgressBar"
+        />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/fragmentProfileDetailsLayout"
+        android:visibility="gone"
+        >
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/imageCardView"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            app:cardCornerRadius="60dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp">
+            <ImageView
+                android:id="@+id/imageViewProfile"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_baseline_profile_24"
+                />
+        </com.google.android.material.card.MaterialCardView>
+
+
+        <TextView
+            android:id="@+id/textViewProfileFragName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/imageCardView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
+            android:text="@string/name"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/fragmentProfileFullProfileButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textViewProfileFragName"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:background="@color/colorTransparent"
+            android:text="See Full Profile"
+            android:textAllCaps="false"
+            android:textColor="@color/colorGrey" />
+
+        <TextView
+            android:id="@+id/textBuyersSection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragmentProfileFullProfileButton"
+            android:text="buyers Section"
+            android:layout_marginTop="24dp"
+            android:layout_marginStart="24dp"
+            />
+
+        <Button
+            android:id="@+id/buttonBuyersSection"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/textBuyersSection"
+            android:layout_marginStart="24sp"
+            android:layout_marginTop="8dp"
+            android:text="Buyers Section"
+            android:textSize="10sp" />
+
+
+        <TextView
+            android:id="@+id/textSellersSection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/buttonBuyersSection"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:text="sellers Section" />
+
+
+        <Button
+            android:id="@+id/buttonSetupStore"
+            android:layout_width="100dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/textSellersSection"
+            android:layout_marginStart="24sp"
+            android:layout_marginTop="8dp"
+            android:text="Setup Store"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/buttonGoToStore"
+            android:layout_width="100dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/buttonSetupStore"
+            android:layout_marginStart="24sp"
+            android:layout_marginTop="8dp"
+            android:text="Go to Store"
+            android:visibility="gone" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonProfileFragLogout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="40dp"
+            android:background="@drawable/button_bg"
+            android:text="Log out"
+            android:textColor="@color/white" />
+
+
+    </RelativeLayout>
+
+
 
 </RelativeLayout>
