--- a/app/src/main/res/layout/fragment_setup_store.xml
+++ b/app/src/main/res/layout/fragment_setup_store.xml
@@ -36,13 +36,12 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:hint="@string/description"
-
         >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextStoreDescription"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="text"
+            android:inputType="textMultiLine"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
