--- a/app/src/main/res/layout/fragment_order_details_for_buyer.xml
+++ b/app/src/main/res/layout/fragment_order_details_for_buyer.xml
@@ -24,7 +24,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:visibility="gone"
-
         >
         <TextView
             android:layout_width="wrap_content"
@@ -258,6 +257,38 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="Active" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/fragmentOrderDetailsForBuyerRatingLayout"
+            android:visibility="gone"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rate this product"
+                android:layout_marginTop="16dp"
+                />
+            <RatingBar
+                android:id="@+id/fragmentOrderDetailsForBuyerRatingBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:isIndicator="false"
+                android:numStars="5"
+                android:stepSize="0.5"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/rate"
+                android:layout_gravity="center"
+                android:id="@+id/fragmentOrderDetailsForBuyerRateButton"
+                />
+        </LinearLayout>
 
 
     </LinearLayout>
