--- a/app/src/main/res/layout/fragment_order_details_for_seller.xml
+++ b/app/src/main/res/layout/fragment_order_details_for_seller.xml
@@ -323,7 +323,7 @@
         android:layout_height="60dp"
         android:text="@string/status"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:textColor="@color/white"
         android:background="@color/colorPrimary"
         android:layout_marginStart="8dp"
